<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_header"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logout"
            android:layout_marginStart="53dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_circular"
            app:layout_constraintBottom_toTopOf="@+id/tvLogout"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Logout"
            android:textColor="@color/black"
            android:hint="@string/email"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="27dp"
        android:paddingEnd="27dp"
        android:paddingTop="20dp"
        android:background="@color/activity_bg_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAccountDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_details"
            android:textSize="16sp"
            android:textColor="#0F1222"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivQRCode"
            android:layout_width="20dp"
            android:layout_height="22dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_qr_code"
            app:layout_constraintEnd_toStartOf="@+id/tvAddress"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0xCa…bD7"
            android:textSize="12sp"
            android:textColor="#0F1222"
            android:ellipsize="middle"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_web3_address"
            android:drawablePadding="8dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_web3_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <RelativeLayout
            android:id="@+id/rlAccountBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_layout_white"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAccountDetails">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/account_balance"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_layout_eth_network"
                android:drawableLeft="@drawable/ic_wifi"
                android:drawablePadding="5dp"
                android:text="Ethereum Testnet"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNetwork"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/spBlockChain"
                android:layout_width="41dp"
                android:layout_height="13dp"
                android:layout_below="@+id/tvNetwork"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="3dp"
                android:layout_marginTop="34dp"
                android:layout_toRightOf="@+id/tvBalance"
                android:drawableRight="@drawable/ic_polygon"
                android:text="ETH"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvExchangeRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvBalance"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                tools:text="1 ETH = 268.21 USD"
                android:textSize="12sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPriceInUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                tools:text="= 0.012 USD"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvNetwork"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvViewTransactionStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvExchangeRate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:gravity="center_horizontal"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/eth_view_transaction_status"
                android:textColor="@color/purple_500"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTransfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvViewTransactionStatus"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/transfer_assets"
                android:textAllCaps="false"
                android:textColor="@color/white" />


        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_message_demo"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:textColor="#0F1222"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/rlAccountBalance"
            app:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/bg_layout_white"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSignMessage">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/message"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMessage"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_below="@+id/tvMessage"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_layout_grey"
                android:gravity="top"
                android:hint="@string/enter_message"
                android:textColor="#0F1222"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMessage"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_button"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/sign_message"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>